ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: masktv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
#  defaultBackend:
    service:
      name: masktv-service
      port:
        number: 80   # check
#  rules:
    - host: # dns of loadbalancer "........."
      http:
        paths:
          pathType: Prefix
          backend:
            service: 
              name: masktv-service
              port:
                number: 80
